2006-01-22  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/iplib.py (handle_normal): fix (finally? somehow I doubt
	it...) the handling of pasting external code with autoindent on.
	To get out of a multiline input, the rule will appear for most
	users unchanged: two blank lines or change the indent level
	proposed by IPython.  But there is a twist now: you can
	add/subtract only *one or two spaces*.  If you add/subtract three
	or more (unless you completely delete the line), IPython will
	accept that line, and you'll need to enter a second one of pure
	whitespace.  I know it sounds complicated, but I can't find a
	different solution that covers all the cases, with the right
	heuristics.  Hopefully in actual use, nobody will really notice
	all these strange rules and things will 'just work'.

2006-01-21  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/iplib.py (interact): catch exceptions which can be
	triggered asynchronously by signal handlers.  Thanks to an
	automatic crash report, submitted by Colin Kingsley
	<tercel-AT-gentoo.org>.
	
2006-01-20  Ville Vainio  <vivainio@gmail.com>

	* Ipython/Extensions/ext_rehashdir.py: Created a usable example
	(%rehashdir, very useful, try it out) of how to extend ipython 
	with new magics. Also added Extensions dir to pythonpath to make 
	importing extensions easy.
	
	* %store now complains when trying to store interactively declared
	classes / instances of those classes.
	
	* Extensions/ipy_system_conf.py, UserConfig/ipy_user_conf.py,
	ipmaker.py: Config rehaul. Now ipy_..._conf.py are always imported 
	if they exist, and ipy_user_conf.py with some defaults is created for
	the user.
	
	* Startup rehashing done by the config file, not InterpreterExec.
	This means system commands are available even without selecting the
	pysh profile. It's the sensible default after all.

2006-01-20  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/iplib.py (raw_input): I _think_ I got the pasting of